fix width overflow

--- a/demo/somment.css
+++ b/demo/somment.css
@@ -20,10 +20,12 @@
   border-left-width: 4px;
   border-left-style: solid;
   padding-left: 20px;
+  box-sizing: border-box;
 }
 
 .comment-indent {
-  margin-left: 20px;
+  padding-left: 20px;
+  box-sizing: border-box;
 }
 
 .comment-author-line {
@@ -61,10 +63,11 @@
 }
 
 .comment-separator {
-  width: 100%;
+  width: calc(100% - 40px);
   border: 0;
   height: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   margin-left: 20px;
+  box-sizing: border-box;
 }
